--- a/package.json
+++ b/package.json
@@ -10,6 +10,17 @@
     "type": "git",
     "url": "https://github.com/jordyorel/orus_vscode_extention.git"
   },
+  "bugs": {
+    "url": "https://github.com/jordyorel/orus_vscode_extention/issues"
+  },
+  "homepage": "https://github.com/jordyorel/orus_vscode_extention",
+  "keywords": [
+    "orus",
+    "language",
+    "syntax",
+    "highlighting",
+    "programming"
+  ],
   "engines": {
     "vscode": "^1.80.0"
   },
