--- a/package.json
+++ b/package.json
@@ -61,6 +61,12 @@
     ]
   },
   "scripts": {
-    "test": "echo \"No tests specified\""
+    "test": "echo \"No tests specified\"",
+    "version:patch": "npm version patch",
+    "version:minor": "npm version minor",
+    "version:major": "npm version major",
+    "package": "vsce package",
+    "publish": "vsce publish",
+    "release": "./release.sh"
   }
 }
